--- a/member_portal/tsconfig.json
+++ b/member_portal/tsconfig.json
@@ -15,10 +15,11 @@
         "isolatedModules": true,
         "noEmit": true,
         "jsx": "react-jsx",
-        "strict": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
+        "strict": false,
+        "noUnusedLocals": false,
+        "noUnusedParameters": false,
         "noFallthroughCasesInSwitch": true,
+        "noUncheckedSideEffectImports": true,
         "baseUrl": ".",
         "paths": {
             "@/*": [
